# corelocation-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_location_values.rs  03_region_monitoring.rs  04_beacon_region.rs  05_heading_configuration.rs  06_geocoder_addresses.rs  07_floor_details.rs  08_authorization_snapshot.rs  09_visit_monitoring.rs  10_location_update_stream.rs  11_beacon_identity_condition.rs  12_monitor_conditions.rs  13_async_location_stream.rs  14_async_monitor_stream.rs
src/: async_api.rs  authorization.rs  beacon_identity_condition.rs  beacon_identity_constraint.rs  beacon_region.rs  error.rs  floor.rs  geocoder.rs  heading.rs  lib.rs  location.rs  location_manager.rs  location_update.rs  manager.rs  monitor.rs  placemark.rs  private.rs  region.rs  visit.rs
src/ffi/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreLocationBridge/: AsyncStream.swift  Authorization.swift  BeaconIdentityCondition.swift  BeaconIdentityConstraint.swift  BeaconRegion.swift  Core.swift  Error.swift  Floor.swift  Geocoder.swift  Heading.swift  Location.swift  LocationManager.swift  LocationUpdate.swift  Manager.swift  Monitor.swift  Region.swift  Visit.swift
swift-bridge/Sources/CoreLocationBridge/include/: module.modulemap
tests/: async_stream_tests.rs  authorization_tests.rs  beacon_identity_condition_tests.rs  beacon_region_tests.rs  error_tests.rs  floor_tests.rs  geocoder_tests.rs  heading_tests.rs  location_manager_tests.rs  location_tests.rs  location_update_tests.rs  monitor_tests.rs  region_tests.rs  visit_tests.rs
