[package]
name = "corelocation-rs"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/corelocation-rs"
repository = "https://github.com/doom-fish/corelocation-rs"
description = "Safe Rust bindings for Apple's CoreLocation framework — managers, condition monitors, regions, visits, geocoding, floors, and live updates on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["corelocation", "gps", "geocoding", "macos", "apple"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "COVERAGE.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[features]
default = []
async = ["doom-fish-utils"]



[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "corelocation"
crate-type = ["lib"]

[dependencies]
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3", optional = true }
apple-cf = { version = ">=0.4, <0.10", default-features = false }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
pollster = "0.3"

[[example]]
name = "01_smoke"

[[example]]
name = "13_async_location_stream"
required-features = ["async"]

[[example]]
name = "14_async_monitor_stream"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
